--- a/app/src/main/res/layout/bottom_sheet_rider.xml
+++ b/app/src/main/res/layout/bottom_sheet_rider.xml
@@ -47,6 +47,7 @@
                 android:src="@drawable/ic_map_black_24dp" />
 
             <TextView
+                android:id="@+id/txtDestination"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
@@ -68,6 +69,7 @@
                 android:src="@drawable/ic_attach_money_black_24dp" />
 
             <TextView
+                android:id="@+id/txtCalculate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
