--- a/app/src/main/res/layout/bottom_sheet_rider.xml
+++ b/app/src/main/res/layout/bottom_sheet_rider.xml
@@ -72,8 +72,7 @@
                 android:id="@+id/txtCalculate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="9"
-                android:text="10km + 10min = $100" />
+                android:layout_weight="9" />
 
         </LinearLayout>
 
