--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,12 +40,12 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/txt_rider_app"
+        android:id="@+id/txt_forgot_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="12sp"
-        android:text="LOOKING_FOR_DRIVER_APP?"
+        android:text="FORGOT PASSWORD? JUST TAP HERE!"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="2"
-        android:layout_above="@id/txt_rider_app"
+        android:layout_above="@id/txt_forgot_pwd"
         android:layout_margin="16dp">
 
         <Button
